ACL has been extended into the controllers and views. Updated the README file.

--- a/README
+++ b/README
@@ -7,6 +7,7 @@ Modifications to the base Zend Framework
  - Doctrine
  - Twitter Bootstrap Form Decorator
  - DbPatch
+ - ACL (Custom ACL Plugin)
 
 
 
@@ -33,3 +34,10 @@ Patch files live in /var/dbpatch named patch-000.sql
 Running DbPatch in /application/scripts/dbpatch
 
 
+
+ACL
+===
+
+Uses Zend Framework ACL in one tidy package. Provides ACL and Authentication
+for the application. Two variables are automatically registered in the controller
+and in the view as $this->_request->_acl and $this->acl respectively.
